import ContactEtabController from "./ContactEtabController";
import { formatPhoneNumber, valueOrHyphen } from "../../../../helpers/dataHelper";

jest.mock("../../../../helpers/dataHelper.js", () => ({
    ...jest.requireActual("../../../../helpers/dataHelper.js"),
    valueOrHyphen: jest.fn(v => v),
    formatPhoneNumber: jest.fn(v => v)
}));

describe("ContactEtabController", () => {
    const CONTACTS = [
        {
            nom: "DOE",
            prenom: "Jane",
            telephone: "06 01 02 03 04",
            email: "coordination@foo.bar",
            role: "Coordinatrice"
        },
        {
            nom: "MARTIN",
            prenom: "François",
            telephone: "06 11 22 33 44",
            email: "contact@foo.bar",
            role: "Président"
        },
        {
            nom: "DOE",
            prenom: "Jane",
            telephone: "06 01 02 03 04",
            email: "coordination@foo.bar",
            role: "Coordinatrice"
        },
        {
            nom: "BLACK",
            prenom: "Jeff",
            telephone: "07 11 22 33 57",
            email: "coordination@foo.bar",
            role: "Coordinatrice"
        }
    ];

    let controller;

    beforeEach(() => {
        controller = new ContactEtabController(CONTACTS);
        jest.clearAllMocks();
    });

    describe("containRole()", () => {
        it("should return true with role undefined", () => {
            const expected = true;
            const actual = controller.containRole(CONTACTS[0]);
            expect(actual).toEqual(expected);
        });

        it("should return true with role selected", () => {
            const expected = true;
            controller.selectedRole = "Coordinatrice";
            const actual = controller.containRole(CONTACTS[0]);
            expect(actual).toEqual(expected);
        });

        it("should return false", () => {
            const expected = false;
            controller.selectedRole = "Président";
            const actual = controller.containRole(CONTACTS[0]);
            expect(actual).toEqual(expected);
        });
    });

    describe("getContactRoles()", () => {
        it("should return an array of roles", () => {
            const expected = ["", "Coordinatrice", "Président"];
            const actual = controller.getContactRoles();
            expect(actual).toEqual(expected);
        });
    });

    describe("containName()", () => {
        it("should return true with empty inputName", () => {
            const expected = true;
            controller.inputName = "";
            const actual = controller.containName(CONTACTS[0]);
            expect(actual).toEqual(expected);
        });
        it("should return true", () => {
            const expected = true;
            controller.inputName = "doe";
            const actual = controller.containName(CONTACTS[0]);
            expect(actual).toEqual(expected);
        });
        it("should return false", () => {
            const expected = false;
            controller.inputName = "jeff";
            const actual = controller.containName(CONTACTS[0]);
            expect(actual).toEqual(expected);
        });
    });

    describe("filterContacts", () => {
        it("should filter contacts on name", () => {
            let actual;
            controller._inputName = "doe";
            controller.filterContacts();
            controller.contacts.subscribe(value => (actual = value));
            expect(actual).toMatchSnapshot();
        });

        it("should filter contacts on role", () => {
            let actual;
            controller.selectedRole = "Coordinatrice";
            controller.filterContacts();
            controller.contacts.subscribe(value => (actual = value));
            expect(actual).toMatchSnapshot();
        });
    });

    describe("formatContact()", () => {
        it("should return format telephone", () => {
            const expected = 1;

            controller.formatContact(CONTACTS[0]);
            const actual = formatPhoneNumber.mock.calls.length;
            expect(actual).toEqual(expected);
        });
        it("should replace empty value with hyphen", () => {
            const expected = 5;
            controller.formatContact(CONTACTS[0]);
            const actual = valueOrHyphen.mock.calls.length;
            expect(actual).toEqual(expected);
        });
    });
});
