// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactEtabController filterContacts should filter contacts on name 1`] = `
[
  {
    "email": "coordination@foo.bar",
    "nom": "DOE",
    "prenom": "Jane",
    "role": "Coordinatrice",
    "telephone": "06 01 02 03 04",
  },
  {
    "email": "coordination@foo.bar",
    "nom": "DOE",
    "prenom": "Jane",
    "role": "Coordinatrice",
    "telephone": "06 01 02 03 04",
  },
]
`;

exports[`ContactEtabController filterContacts should filter contacts on role 1`] = `
[
  {
    "email": "coordination@foo.bar",
    "nom": "DOE",
    "prenom": "Jane",
    "role": "Coordinatrice",
    "telephone": "06 01 02 03 04",
  },
  {
    "email": "coordination@foo.bar",
    "nom": "DOE",
    "prenom": "Jane",
    "role": "Coordinatrice",
    "telephone": "06 01 02 03 04",
  },
  {
    "email": "coordination@foo.bar",
    "nom": "BLACK",
    "prenom": "Jeff",
    "role": "Coordinatrice",
    "telephone": "07 11 22 33 57",
  },
]
`;
